--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 	<title>Learning vue</title>
 </head>
@@ -55,6 +57,26 @@
   		</ol>
 	</div>
 
+	<div id="example">
+  		<p>Original message: "{{ message }}"</p>
+  		<p>Computed reversed message: "{{ reversedMessage }}"</p>
+	</div>
+
+	<div id="watch-example">
+  		<p>
+    		Ask a yes/no question:
+    		<input v-model="question">
+  		</p>
+  		<p>{{ answer }}</p>
+  		<div v-if="Math.random() > 0.5">
+  			Now you see me
+		</div>
+		<div v-else>
+ 			Now you don't
+		</div>
+
+	</div>
+	
 	<script>
 		var app = new Vue({
   			el: '#app',
@@ -124,6 +146,61 @@
   			}
 		})
 
+		var vm = new Vue({
+  			el: '#example',
+  			data: {
+    			message: 'Hello'
+			},
+  			computed: {
+    			// a computed getter
+    			reversedMessage: function () {
+      				// `this` points to the vm instance
+     				 return this.message.split('').reverse().join('')
+    			}
+  			}
+		})
+
+		var watchExampleVM = new Vue({
+  			el: '#watch-example',
+  			data: {
+   				 question: '',
+				 answer: 'I cannot give you an answer until you ask a question!'
+  			},
+  			watch: {
+    			// whenever question changes, this function will run
+    			question: function () {
+      				this.answer = 'Waiting for you to stop typing...'
+      				this.debouncedGetAnswer()
+    			}
+  			},
+  			created: function () {
+    				// _.debounce is a function provided by lodash to limit how
+    				// often a particularly expensive operation can be run.
+				    // In this case, we want to limit how often we access
+				    // yesno.wtf/api, waiting until the user has completely
+				    // finished typing before making the ajax request. To learn
+				    // more about the _.debounce function (and its cousin
+				    // _.throttle), visit: https://lodash.com/docs#debounce
+    			this.debouncedGetAnswer = _.debounce(this.getAnswer, 500)
+  			},
+  			methods: {
+    			getAnswer: function () {
+				      		if (this.question.indexOf('?') === -1) {
+				        		this.answer = 'Questions usually contain a question mark. ;-)'
+				       			return
+				      		}
+				      this.answer = 'Thinking...'
+				      var vm = this
+				      axios.get('https://yesno.wtf/api')
+				        .then(function (response) {
+				          vm.answer = _.capitalize(response.data.answer)
+				        })
+				        .catch(function (error) {
+				          vm.answer = 'Error! Could not reach the API. ' + error
+		       		})
+   				}
+  			}
+		})
 	</script>
 
 </body>
